adding file system folder to the project and created a file in the createdfile

--- a/UI Design/src/UI_Pages/viewusers.form
+++ b/UI Design/src/UI_Pages/viewusers.form
@@ -46,6 +46,9 @@
           </Border>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
