--- a/UI Design/src/UI_Pages/ViewCreatedFiles.form
+++ b/UI Design/src/UI_Pages/ViewCreatedFiles.form
@@ -110,6 +110,9 @@
                   </Table>
                 </Property>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
